# W55RP20-S2E

./: .gitignore  CMakeLists.txt  OTA_IMPLEMENTATION.md  ProjectOptions.cmake  README.md
libraries/: CMakeLists.txt
main/: CMakeLists.txt
main/App/: App.c  CMakeLists.txt
main/Boot/: Boot.c
main/SPI_Mode_Master/: SPI_Mode_Master.c
patches/: 002_ioLIbrary_Driver.patch
port/app/: CMakeLists.txt  WIZ5XXSR-RP_Debug.h  port_common.h
port/app/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
port/app/aws-iot-device-sdk-embedded-C/inc/: core_mqtt_config.h  mqtt_transport_interface.h  transport_interface.h
port/app/aws-iot-device-sdk-embedded-C/src/: mqtt_transport_interface.c
port/app/board/inc/: WIZnet_board.h
port/app/board/src/: WIZnet_board.c
port/app/configuration/inc/: ConfigData.h  common.h  fw_info.h  segcp.h
port/app/configuration/src/: ConfigData.c  segcp.c
port/app/html_file/: Web_page.h  Web_page.html
port/app/http_server/inc/: httpParser.h  httpServer.h  httpServerUpdate.h  httpUtil.h
port/app/http_server/src/: httpParser.c  httpServer.c  httpUtil.c
port/app/ioLibrary_Driver/inc/: w5x00_gpio_irq.h
port/app/ioLibrary_Driver/src/: w5x00_gpio_irq.c  w5x00_spi.c  wiznet_spi_pio.c
port/app/mbedtls/inc/: SSLConfig copy.h  SSLConfig.h  SSLInterface.h  SSL_Random.h
port/app/mbedtls/src/: SSLInterface.c  SSL_Random.c
port/app/modbus/inc/: mb.h  mbascii.h  mbrtu.h  mbserial.h  mbtcp.h  mbtimer.h
port/app/modbus/src/: mb.c  mbascii.c  mbrtu.c  mbserial.c  mbtcp.c  mbtimer.c
port/app/platform_handler/inc/: bufferHandler.h  deviceHandler.h  dnsHandler.h  flashHandler.h  gpioHandler.h  httpHandler.h  netHandler.h  otaHandler.h  spiHandler.h  storageHandler.h  uartHandler.h
port/app/platform_handler/src/: bufferHandler.c  deviceHandler.c  dnsHandler.c  flashHandler.c  gpioHandler.c  httpHandler.c  mqttsHandler.c  netHandler.c  otaHandler.c  spiHandler.c  storageHandler.c  timerHandler.c  uartHandler.c
port/app/serial_to_ethernet/inc/: seg.h
port/app/serial_to_ethernet/src/: seg.c  seg_data.c  seg_proc.c  seg_util.c
port/boot/: CMakeLists.txt  WIZ5XXSR-RP_Debug.h  port_common.h
port/boot/board/inc/: WIZnet_board.h
port/boot/board/src/: WIZnet_board.c
port/boot/configuration/inc/: ConfigData.h  common.h
port/boot/configuration/src/: ConfigData.c  segcp.c
port/boot/ioLibrary_Driver/inc/: w5x00_spi.h
port/boot/ioLibrary_Driver/src/: w5x00_spi.c
port/boot/platform_handler/inc/: deviceHandler.h  flashHandler.h  gpioHandler.h  uartHandler.h
port/boot/platform_handler/src/: deviceHandler.c  flashHandler.c  gpioHandler.c  storageHandler.c  timerHandler.c  uartHandler.c
port/boot/serial_to_ethernet/inc/: seg.h
port/boot/serial_to_ethernet/src/: seg.c
style/: astyle_core.conf
tools/: merge_hex.py  test_ota_ping.py
